--- a/src/components/menu/menu.component.pug
+++ b/src/components/menu/menu.component.pug
@@ -1,2 +1,24 @@
 //-menu
 section.menu
+    .menuHeader
+        .menuLogo
+            img(src="assets/images/png/logoBlack.png", alt="logo")
+        .menuClose
+            .icon-close
+    nav.menuNav
+        a.menuLink(href="javascript:void(0)") RS chip 
+        a.menuLink(href="javascript:void(0)") GTR Chip
+        a.menuLink(href="javascript:void(0)") Support 
+        a.menuLink(href="javascript:void(0)") Contact us
+    .menuConacts 
+        .menuConactsItem
+            i.icon.icon-phone-png
+            a(href="tel:+1 800 796 16 17").phone +1 800 796 16 17
+        .menuConactsItem
+            i.icon.icon-mail-png 
+            a(href="mailto:rschiphelp@gmail.com").email rschiphelp@gmail.com
+        .menuConactsItem
+            i.icon.icon-location-png 
+            address 1201 East 5th Street North Little Rock, Arkansas USA, 72114
+        .menuConactsIcons 
+            include ../socialIcons/socialIcons.component.pug
