--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -58,7 +58,8 @@ html(lang="en" data-scroll='0')
             //- link(rel="stylesheet", href="css/styles-calc.css", type="text/css") // if you want use old style programming
            
         block script
-            script(src="/js/debuggrid/debuggrid.component.js")
+            script(src="js/menu/menu.component.js")
+            script(src="js/debuggrid/debuggrid.component.js")
             script(src="js/main.js")
             script(src="libs/js/store-scroll.js")
             script(src="libs/js/modal.js")
