--- a/src/sass/sprite/png/spritePNG.sass
+++ b/src/sass/sprite/png/spritePNG.sass
@@ -42,16 +42,16 @@ $icon-arrow-white-details-png-total-height: 239px
 $icon-arrow-white-details-png-image: '../assets/icons/png/spritePNG.png'
 $icon-arrow-white-details-png: (252px, 35px, -252px, -35px, 11px, 8px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconArrowWhiteDetails-png', )
 $icon-cart-png-name: 'iconCart-png'
-$icon-cart-png-x: 0px
+$icon-cart-png-x: 28px
 $icon-cart-png-y: 212px
-$icon-cart-png-offset-x: 0px
+$icon-cart-png-offset-x: -28px
 $icon-cart-png-offset-y: -212px
 $icon-cart-png-width: 27px
 $icon-cart-png-height: 27px
 $icon-cart-png-total-width: 270px
 $icon-cart-png-total-height: 239px
 $icon-cart-png-image: '../assets/icons/png/spritePNG.png'
-$icon-cart-png: (0px, 212px, 0px, -212px, 27px, 27px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconCart-png', )
+$icon-cart-png: (28px, 212px, -28px, -212px, 27px, 27px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconCart-png', )
 $icon-chat-png-name: 'iconChat-png'
 $icon-chat-png-x: 0px
 $icon-chat-png-y: 0px
@@ -63,6 +63,17 @@ $icon-chat-png-total-width: 270px
 $icon-chat-png-total-height: 239px
 $icon-chat-png-image: '../assets/icons/png/spritePNG.png'
 $icon-chat-png: (0px, 0px, 0px, 0px, 212px, 212px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconChat-png', )
+$icon-close-png-name: 'iconClose-png'
+$icon-close-png-x: 0px
+$icon-close-png-y: 212px
+$icon-close-png-offset-x: 0px
+$icon-close-png-offset-y: -212px
+$icon-close-png-width: 28px
+$icon-close-png-height: 27px
+$icon-close-png-total-width: 270px
+$icon-close-png-total-height: 239px
+$icon-close-png-image: '../assets/icons/png/spritePNG.png'
+$icon-close-png: (0px, 212px, 0px, -212px, 28px, 27px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconClose-png', )
 $icon-facebook-png-name: 'iconFacebook-png'
 $icon-facebook-png-x: 252px
 $icon-facebook-png-y: 18px
@@ -119,38 +130,38 @@ $icon-lifetime-png-total-height: 239px
 $icon-lifetime-png-image: '../assets/icons/png/spritePNG.png'
 $icon-lifetime-png: (212px, 176px, -212px, -176px, 30px, 32px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconLifetime-png', )
 $icon-location-png-name: 'iconLocation-png'
-$icon-location-png-x: 27px
+$icon-location-png-x: 55px
 $icon-location-png-y: 212px
-$icon-location-png-offset-x: -27px
+$icon-location-png-offset-x: -55px
 $icon-location-png-offset-y: -212px
 $icon-location-png-width: 20px
 $icon-location-png-height: 25px
 $icon-location-png-total-width: 270px
 $icon-location-png-total-height: 239px
 $icon-location-png-image: '../assets/icons/png/spritePNG.png'
-$icon-location-png: (27px, 212px, -27px, -212px, 20px, 25px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconLocation-png', )
+$icon-location-png: (55px, 212px, -55px, -212px, 20px, 25px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconLocation-png', )
 $icon-mail-png-name: 'iconMail-png'
-$icon-mail-png-x: 64px
+$icon-mail-png-x: 92px
 $icon-mail-png-y: 212px
-$icon-mail-png-offset-x: -64px
+$icon-mail-png-offset-x: -92px
 $icon-mail-png-offset-y: -212px
 $icon-mail-png-width: 24px
 $icon-mail-png-height: 17px
 $icon-mail-png-total-width: 270px
 $icon-mail-png-total-height: 239px
 $icon-mail-png-image: '../assets/icons/png/spritePNG.png'
-$icon-mail-png: (64px, 212px, -64px, -212px, 24px, 17px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconMail-png', )
+$icon-mail-png: (92px, 212px, -92px, -212px, 24px, 17px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconMail-png', )
 $icon-phone-png-name: 'iconPhone-png'
-$icon-phone-png-x: 47px
+$icon-phone-png-x: 75px
 $icon-phone-png-y: 212px
-$icon-phone-png-offset-x: -47px
+$icon-phone-png-offset-x: -75px
 $icon-phone-png-offset-y: -212px
 $icon-phone-png-width: 17px
 $icon-phone-png-height: 25px
 $icon-phone-png-total-width: 270px
 $icon-phone-png-total-height: 239px
 $icon-phone-png-image: '../assets/icons/png/spritePNG.png'
-$icon-phone-png: (47px, 212px, -47px, -212px, 17px, 25px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconPhone-png', )
+$icon-phone-png: (75px, 212px, -75px, -212px, 17px, 25px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconPhone-png', )
 $icon-return-png-name: 'iconReturn-png'
 $icon-return-png-x: 212px
 $icon-return-png-y: 144px
@@ -163,20 +174,20 @@ $icon-return-png-total-height: 239px
 $icon-return-png-image: '../assets/icons/png/spritePNG.png'
 $icon-return-png: (212px, 144px, -212px, -144px, 32px, 32px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconReturn-png', )
 $icon-youtube-png-name: 'iconYoutube-png'
-$icon-youtube-png-x: 88px
+$icon-youtube-png-x: 116px
 $icon-youtube-png-y: 212px
-$icon-youtube-png-offset-x: -88px
+$icon-youtube-png-offset-x: -116px
 $icon-youtube-png-offset-y: -212px
 $icon-youtube-png-width: 22px
 $icon-youtube-png-height: 16px
 $icon-youtube-png-total-width: 270px
 $icon-youtube-png-total-height: 239px
 $icon-youtube-png-image: '../assets/icons/png/spritePNG.png'
-$icon-youtube-png: (88px, 212px, -88px, -212px, 22px, 16px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconYoutube-png', )
+$icon-youtube-png: (116px, 212px, -116px, -212px, 22px, 16px, 270px, 239px, '../assets/icons/png/spritePNG.png', 'iconYoutube-png', )
 $spritesheet-width: 270px
 $spritesheet-height: 239px
 $spritesheet-image: '../assets/icons/png/spritePNG.png'
-$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, $icon-arrow-white-details-png, $icon-cart-png, $icon-chat-png, $icon-facebook-png, $icon-free-png, $icon-info-png, $icon-instagram-png, $icon-lifetime-png, $icon-location-png, $icon-mail-png, $icon-phone-png, $icon-return-png, $icon-youtube-png, )
+$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, $icon-arrow-white-details-png, $icon-cart-png, $icon-chat-png, $icon-close-png, $icon-facebook-png, $icon-free-png, $icon-info-png, $icon-instagram-png, $icon-lifetime-png, $icon-location-png, $icon-mail-png, $icon-phone-png, $icon-return-png, $icon-youtube-png, )
 $spritesheet: (270px, 239px, '../assets/icons/png/spritePNG.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
