--- a/src/sass/styles-sprites.sass
+++ b/src/sass/styles-sprites.sass
@@ -33,3 +33,5 @@
 .icon-arrow-white-details
     +sprite($icon-arrow-white-details-png)
     min-width: 11px
+.icon-close
+    +sprite($icon-close-png)
