--- a/src/sass/sprite/webp/spriteWEBP.sass
+++ b/src/sass/sprite/webp/spriteWEBP.sass
@@ -42,16 +42,16 @@ $icon-arrow-white-details-webp-total-height: 239px
 $icon-arrow-white-details-webp-image: '../assets/icons/webp/spriteWEBP.webp'
 $icon-arrow-white-details-webp: (252px, 35px, -252px, -35px, 11px, 8px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowWhiteDetails-webp', )
 $icon-cart-webp-name: 'iconCart-webp'
-$icon-cart-webp-x: 0px
+$icon-cart-webp-x: 28px
 $icon-cart-webp-y: 212px
-$icon-cart-webp-offset-x: 0px
+$icon-cart-webp-offset-x: -28px
 $icon-cart-webp-offset-y: -212px
 $icon-cart-webp-width: 27px
 $icon-cart-webp-height: 27px
 $icon-cart-webp-total-width: 270px
 $icon-cart-webp-total-height: 239px
 $icon-cart-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-cart-webp: (0px, 212px, 0px, -212px, 27px, 27px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconCart-webp', )
+$icon-cart-webp: (28px, 212px, -28px, -212px, 27px, 27px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconCart-webp', )
 $icon-chat-webp-name: 'iconChat-webp'
 $icon-chat-webp-x: 0px
 $icon-chat-webp-y: 0px
@@ -63,6 +63,17 @@ $icon-chat-webp-total-width: 270px
 $icon-chat-webp-total-height: 239px
 $icon-chat-webp-image: '../assets/icons/webp/spriteWEBP.webp'
 $icon-chat-webp: (0px, 0px, 0px, 0px, 212px, 212px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconChat-webp', )
+$icon-close-webp-name: 'iconClose-webp'
+$icon-close-webp-x: 0px
+$icon-close-webp-y: 212px
+$icon-close-webp-offset-x: 0px
+$icon-close-webp-offset-y: -212px
+$icon-close-webp-width: 28px
+$icon-close-webp-height: 27px
+$icon-close-webp-total-width: 270px
+$icon-close-webp-total-height: 239px
+$icon-close-webp-image: '../assets/icons/webp/spriteWEBP.webp'
+$icon-close-webp: (0px, 212px, 0px, -212px, 28px, 27px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconClose-webp', )
 $icon-facebook-webp-name: 'iconFacebook-webp'
 $icon-facebook-webp-x: 252px
 $icon-facebook-webp-y: 18px
@@ -119,38 +130,38 @@ $icon-lifetime-webp-total-height: 239px
 $icon-lifetime-webp-image: '../assets/icons/webp/spriteWEBP.webp'
 $icon-lifetime-webp: (212px, 176px, -212px, -176px, 30px, 32px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconLifetime-webp', )
 $icon-location-webp-name: 'iconLocation-webp'
-$icon-location-webp-x: 27px
+$icon-location-webp-x: 55px
 $icon-location-webp-y: 212px
-$icon-location-webp-offset-x: -27px
+$icon-location-webp-offset-x: -55px
 $icon-location-webp-offset-y: -212px
 $icon-location-webp-width: 20px
 $icon-location-webp-height: 25px
 $icon-location-webp-total-width: 270px
 $icon-location-webp-total-height: 239px
 $icon-location-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-location-webp: (27px, 212px, -27px, -212px, 20px, 25px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconLocation-webp', )
+$icon-location-webp: (55px, 212px, -55px, -212px, 20px, 25px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconLocation-webp', )
 $icon-mail-webp-name: 'iconMail-webp'
-$icon-mail-webp-x: 64px
+$icon-mail-webp-x: 92px
 $icon-mail-webp-y: 212px
-$icon-mail-webp-offset-x: -64px
+$icon-mail-webp-offset-x: -92px
 $icon-mail-webp-offset-y: -212px
 $icon-mail-webp-width: 24px
 $icon-mail-webp-height: 17px
 $icon-mail-webp-total-width: 270px
 $icon-mail-webp-total-height: 239px
 $icon-mail-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-mail-webp: (64px, 212px, -64px, -212px, 24px, 17px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconMail-webp', )
+$icon-mail-webp: (92px, 212px, -92px, -212px, 24px, 17px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconMail-webp', )
 $icon-phone-webp-name: 'iconPhone-webp'
-$icon-phone-webp-x: 47px
+$icon-phone-webp-x: 75px
 $icon-phone-webp-y: 212px
-$icon-phone-webp-offset-x: -47px
+$icon-phone-webp-offset-x: -75px
 $icon-phone-webp-offset-y: -212px
 $icon-phone-webp-width: 17px
 $icon-phone-webp-height: 25px
 $icon-phone-webp-total-width: 270px
 $icon-phone-webp-total-height: 239px
 $icon-phone-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-phone-webp: (47px, 212px, -47px, -212px, 17px, 25px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconPhone-webp', )
+$icon-phone-webp: (75px, 212px, -75px, -212px, 17px, 25px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconPhone-webp', )
 $icon-return-webp-name: 'iconReturn-webp'
 $icon-return-webp-x: 212px
 $icon-return-webp-y: 144px
@@ -163,20 +174,20 @@ $icon-return-webp-total-height: 239px
 $icon-return-webp-image: '../assets/icons/webp/spriteWEBP.webp'
 $icon-return-webp: (212px, 144px, -212px, -144px, 32px, 32px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconReturn-webp', )
 $icon-youtube-webp-name: 'iconYoutube-webp'
-$icon-youtube-webp-x: 88px
+$icon-youtube-webp-x: 116px
 $icon-youtube-webp-y: 212px
-$icon-youtube-webp-offset-x: -88px
+$icon-youtube-webp-offset-x: -116px
 $icon-youtube-webp-offset-y: -212px
 $icon-youtube-webp-width: 22px
 $icon-youtube-webp-height: 16px
 $icon-youtube-webp-total-width: 270px
 $icon-youtube-webp-total-height: 239px
 $icon-youtube-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-youtube-webp: (88px, 212px, -88px, -212px, 22px, 16px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconYoutube-webp', )
+$icon-youtube-webp: (116px, 212px, -116px, -212px, 22px, 16px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconYoutube-webp', )
 $spritesheet-width: 270px
 $spritesheet-height: 239px
 $spritesheet-image: '../assets/icons/webp/spriteWEBP.webp'
-$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-arrow-white-details-webp, $icon-cart-webp, $icon-chat-webp, $icon-facebook-webp, $icon-free-webp, $icon-info-webp, $icon-instagram-webp, $icon-lifetime-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-return-webp, $icon-youtube-webp, )
+$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-arrow-white-details-webp, $icon-cart-webp, $icon-chat-webp, $icon-close-webp, $icon-facebook-webp, $icon-free-webp, $icon-info-webp, $icon-instagram-webp, $icon-lifetime-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-return-webp, $icon-youtube-webp, )
 $spritesheet: (270px, 239px, '../assets/icons/webp/spriteWEBP.webp', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
