--- a/src/components/modals/modal.component.sass
+++ b/src/components/modals/modal.component.sass
@@ -60,6 +60,8 @@
     position: absolute
     top: 0
     right: 0
+    border: none
+    background-color: transparent
 
 .isModalShow
     overflow: hidden
