--- a/src/components/modals/modalNews.component.pug
+++ b/src/components/modals/modalNews.component.pug
@@ -1,9 +1,10 @@
 //-modalNews
 +modal("modalNews", "modalNews")
+    
     h3.modalTitle BMW M5 tuned by RS chip at our dealer’s car repair shop
-    div 12 june 2021
+    .modalDate 12 june 2021
     img(src="assets/images/png/imgNewsPopup.png", alt="imgGallary")
-    p Developing the best possible ECU remap (chiptuning) for a car requires time and intimate knowledge of the vehicle you’re tuning. In order to provide high quality ECU remaps, our mappings are developed exclusively for BMW and MINI cars. Before we add an ECU remap to our line-up, we make sure it’s tested thoroughly on our dyno. Our software is engineered to create a smooth power delivery that keeps going till the redline, without putting your engine at risk. Besides that our Stage 2 and Stage 3 software are designed to get the most out of our Mosselman high-end performance parts.
+    p.page__text Developing the best possible ECU remap (chiptuning) for a car requires time and intimate knowledge of the vehicle you’re tuning. In order to provide high quality ECU remaps, our mappings are developed exclusively for BMW and MINI cars. Before we add an ECU remap to our line-up, we make sure it’s tested thoroughly on our dyno. Our software is engineered to create a smooth power delivery that keeps going till the redline, without putting your engine at risk. Besides that our Stage 2 and Stage 3 software are designed to get the most out of our Mosselman high-end performance parts.
     img(src="assets/images/png/imgNewsPopup2.png", alt="imgGallary")
     img(src="assets/images/png/imgNewsPopup3.png", alt="imgGallary")
-    p Developing the best possible ECU remap (chiptuning) for a car requires time and intimate knowledge of the vehicle you’re tuning. In order to provide high quality ECU remaps, our mappings are developed exclusively for BMW and MINI cars.
+    p.page__text Developing the best possible ECU remap (chiptuning) for a car requires time and intimate knowledge of the vehicle you’re tuning. In order to provide high quality ECU remaps, our mappings are developed exclusively for BMW and MINI cars.
